--- a/public/index.html
+++ b/public/index.html
@@ -6,6 +6,7 @@
     <link rel="shortcut icon" href="%PUBLIC_URL%/favicon.ico">
     <link rel="stylesheet" href="http://cdn.leafletjs.com/leaflet-0.7.3/leaflet.css" />
     <link href="https://fonts.googleapis.com/css?family=Roboto:300,400,500" rel="stylesheet">
+    <script src="https://use.fontawesome.com/437617e53e.js"></script>
     <script src="https://maps.googleapis.com/maps/api/js?key=AIzaSyA_kf2aoRKhb92Yk294aLXTlFUl7r31tqg&libraries=places""></script> 
 
     <!--
